css/style.css
/* -------------------------------------------

Name: 		Arter
Version:  1.0
Author:		Nazar Miller (millerDigitalDesign)
Portfolio:  https://themeforest.net/user/millerdigitaldesign/portfolio?ref=MillerDigitalDesign

p.s. I am available for Freelance hire (UI design, web development). mail: miller.themes@gmail.com

------------------------------------------- */
/*--------------------------------------------

1. common
      - fonts
      - text defaults
      - title defaults
      - text config
      - container
      - buttons frame
      - suptitle
      - divider
      - image defaults
      - link defaults
      - table
      - quote
      - list
2. link
3. buttons
4. space
5. app marcup
      - top background
      - preloader
      - scroll frame
      - app
      - mobile top bar
      - info bar
      - content
      - menu bar
      - marcup media queries
6. info bar
      - header
      - name
      - language skills
      - hard skills
      - knowledge
      - info bar links
      - social links
      - progresbar color
7. menu bar
      - main menu
      - language change
      - current page title
8. content
      - section title
      - card
      - banner
      - typing code
      - counters
      - services
      - price
      - testimonials
      - timeline
      - contact form
      - blog
      - pagination
      - brands
      - footer
9. portfolio
      - filter
      - portfolio items
      - touch device querie
      - single project
      - fancybox customization
10. media queries
11. burger button
12. transitions
      - in animation
      - out animation


--------------------------------------------*/
/*
$main-color: #4078c0
$main-color: #f44336;
$main-color: #4CAF50;
$main-color: #64B5F6;
*/
/* ------------------------------

common

------------------------------ */
/* ----- fonts ----- */
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap");
/* ----- text defaults ----- */
body {
  color: #8c8c8e;
  font-size: 12px;
  font-family: "Poppins", sans-serif;
  font-weight: 300;
  letter-spacing: 0.5px;
  font-smooth: subpixel-antialiased;
}

/* ----- title defaults ----- */
h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 700;
  color: #fafafc;
  margin-bottom: 0;
  font-family: "Poppins", sans-serif;
}

h1 {
  font-size: 52px;
  font-weight: 800;
}

h4 {
  font-size: 17px;
  font-weight: 600;
}

h5 {
  font-size: 14px;
  font-weight: 600;
}

h6 {
  font-size: 12px;
  font-weight: 400;
}

/* ----- text config ----- */
.art-sm-text {
  font-size: 11px;
}

.art-lg-text {
  font-size: 16px;
  text-align: center;
}

.art-white {
  color: #fafafc;
}

/* ----- container ----- */
.container-fluid {
  overflow: hidden;
  padding: 0 30px;
  position: relative;
}

/* ----- buttons frame ----- */
.art-buttons-frame a {
margin-left: 10px;
}

/* ----- suptitle ----- */
.art-el-suptitle {
  margin-top: 5px;
  color: #646466;
  font-style: italic;
  font-size: 11px;
}

/* ----- divider ----- */
.art-ls-divider {
  background: #646466;
  width: 100%;
  height: 1px;
  opacity: 0.3;
}

/* ----- image defaults ----- */
.art-img-default {
  width: 100%;
  -webkit-box-shadow: 0 3px 8px 0 rgba(15, 15, 20, 0.2);
  box-shadow: 0 3px 8px 0 rgba(15, 15, 20, 0.2);
}

/* ----- link defaults ----- */
a {
  text-decoration: none;
  color: #8c8c8e;
}
a:hover {
  text-decoration: none;
  color: #fafafc;
}
a:focus {
  outline: inherit;
}

/* ----- table ----- */
.art-table {
  color: #8c8c8e;
}
.art-table ul {
  padding: 0;
  margin: 0;
}
.art-table ul li {
  list-style-type: none;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 5px;
}
.art-table ul li:last-child {
  margin-bottom: 0;
}

/* ----- quote ----- */
blockquote {
  margin-top: 30px;
  margin-bottom: 30px;
  background: #4078c0;
  color: #191923;
  padding: 30px;
  padding-left: 35px;
  font-weight: 400;
  font-style: italic;
  font-size: 14px;
  -webkit-box-shadow: 0 1px 4px 0 rgba(15, 15, 20, 0.1);
  box-shadow: 0 1px 4px 0 rgba(15, 15, 20, 0.1);
  position: relative;
}
blockquote:before {
  position: absolute;
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  content: "\f10d";
  font-size: 18px;
  opacity: 0.5;
  top: 5px;
  left: 9px;
  color: #fafafc;
}
blockquote:after {
  position: absolute;
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  content: "\f10d";
  font-size: 18px;
  opacity: 0.5;
  bottom: 5px;
  right: 9px;
  color: #fafafc;
  -webkit-transform: rotate(180deg);
  transform: rotate(180deg);
}

/* ----- list ----- */
.art-custom-list {
  padding-left: 25px;
}
.art-custom-list li {
  position: relative;
  list-style-type: none;
  color: #fafafc;
  margin-bottom: 5px;
}
.art-custom-list li:before {
  content: "";
  position: absolute;
  top: 4px;
  left: -25px;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  border: solid 2px #4078c0;
  background: transparent;
  -webkit-box-shadow: 0 3px 8px 0 rgba(15, 15, 20, 0.2);
  box-shadow: 0 3px 8px 0 rgba(15, 15, 20, 0.2);
}

/* ------------------------------

link

------------------------------ */
.art-link {
  position: relative;
  text-transform: uppercase;
  font-size: 10px;
  display: inline-block;
  letter-spacing: 1.5px;
  font-weight: 600;
  margin-right: 15px;
  margin-bottom: 10px;
  color: #8c8c8e;
  -webkit-transition: 0.4s ease-in-out;
  transition: 0.4s ease-in-out;
}
.art-link:hover {
  color: #fafafc;
  text-shadow: 0 0 3px rgba(250, 250, 252, 0.4);
}
.art-link.art-white-link {
  color: #fafafc;
}
.art-link.art-white-link:hover {
  color: #fafafc;
  text-shadow: 0 0 3px rgba(250, 250, 252, 0.4);
  -webkit-transform: translateX(5px);
  transform: translateX(5px);
}
/* ... */

